--- a/public/template/add_wine_new_detail_1.html
+++ b/public/template/add_wine_new_detail_1.html
@@ -51,7 +51,7 @@
             <form id="form" name="form" method="post" action="#">
                 <div class="left">
                    <div class="required">
-                   		<label><span>*</span>葡萄酒英文名</label>
+                   		<label class="vm"><span>*</span>葡萄酒英文名</label>
                        <div class="field_with_errors">
                            <input name="text" type="text" class="text name" value="" />
                            <label class="message" for="wines_register_name_en">请输入酒名</label>
@@ -97,7 +97,7 @@
                        </div>
                    </div>
                    <div class="optional">
-                   		<label>照片</label>
+                   		<label class="vm">照片</label>
                        <input name="text" type="text" class="text name mr5" value="" /><a href="#" class="btn_gray"><span>选择照片</span></a>
                    </div>
                     <div class="mt10">
