--- a/public/template/add_wine_new_detail_2.html
+++ b/public/template/add_wine_new_detail_2.html
@@ -49,20 +49,20 @@
             <form id="form" name="form" method="post" action="#">
            <div class="main">
                    <div class="required">
-                   		<label>葡萄酒中文名</label>
+                   		<label class="vm">葡萄酒中文名</label>
                         <input name="text" type="text" class="text name" value="" /> 
                         多个名称用“；”隔开
                    </div>
              <div class="required">
-        <label>官方网站</label>
+        <label class="vm">官方网站</label>
                       <input name="text" type="text" class="text name" value="" />
              </div>
                    <div class="required">
-                       <label>酒庄英文名</label>
+                       <label class="vm">酒庄英文名</label>
                        <input name="text" type="text" class="text name" value="" />
              </div>
                    <div class="required">
-                       <label>酒庄中文名</label>
+                       <label class="vm">酒庄中文名</label>
                        <input name="text" type="text" class="text name" value="" /> 
                        多个名称用“；”隔开
                    </div>
@@ -77,7 +77,7 @@
                          </select>
                   </div>
                   <div class="optional">
-               		   <label>葡萄品种</label>
+               		   <label class="vm">葡萄品种</label>
                     <div class="content2">
                       <input name="" type="text" class="text" /> 
                        成分百分比
@@ -99,11 +99,11 @@
                     </div>
              </div>
                    <div class="optional">
-                   		<label>酒精度</label>
+                   		<label class="vm">酒精度</label>
                         <input type="text" name="textfield" class="text percent"/> %
                    </div>
                    <div class="optional">
-                   		<label>评分</label>
+                   		<label class="vm">评分</label>
                         <div class="content2">
                       评论家 <input name="" type="text" class="text" /> 
                        得分
