--- a/public/template/add_wine_year_detail_1.html
+++ b/public/template/add_wine_year_detail_1.html
@@ -72,7 +72,7 @@
                        750ml
                    </div>
                    <div class="optional">
-                   		<label>照片</label>
+                   		<label class="vm">照片</label>
                        <input name="text" type="text" class="text name mr5" value="" /><a href="#" class="btn_gray"><span>选择照片</span></a>
                    </div>
                     <div class="mt10">
