--- a/public/template/add_wine_year_detail_2.html
+++ b/public/template/add_wine_year_detail_2.html
@@ -53,7 +53,7 @@
                         2001拉菲珍宝
                    </div>
                    <div class="required">
-                       <label>其他酒款中文名</label>
+                       <label class="vm">其他酒款中文名</label>
                        <input name="text" type="text" class="text name" value="" /> 
                        多个名称用“；”隔开
              </div>
@@ -70,7 +70,7 @@
                        某某酒庄
                    </div>
                    <div class="required">
-                       <label>其他酒庄中文名</label>
+                       <label class="vm">其他酒庄中文名</label>
                        <input name="text" type="text" class="text name" value="" /> 
                        多个名称用“；”隔开
                    </div>
@@ -85,7 +85,7 @@
                          </select>
                   </div>
                   <div class="optional">
-               		   <label>葡萄品种</label>
+               		   <label class="vm">葡萄品种</label>
                     <div class="content2">
                       <input name="" type="text" class="text" /> 
                        成分百分比
@@ -107,11 +107,11 @@
                     </div>
              </div>
                    <div class="optional">
-                   		<label>酒精度</label>
+                   		<label class="vm">酒精度</label>
                         <input type="text" name="textfield" class="text percent"/> %
                    </div>
                    <div class="optional">
-                   		<label>评分</label>
+                   		<label class="vm">评分</label>
                         <div class="content2">
                       评论家 <input name="" type="text" class="text" /> 
                        得分
