--- a/public/template/cellar.html
+++ b/public/template/cellar.html
@@ -103,11 +103,8 @@
               <tr>
                 <td class="img"><a href="wine_profile.html"><img src="images/test/wine50.jpg" width="50" height="50" alt="wine name" /></a></td>
                 <td class="year">2005</td>
-                <td class="des">2001拉菲珍宝<br />
-                  Carruades de lafittle<br />
-                  法国-波尔多-波亚克<br />
-                  拉菲古堡<br />
-                红葡萄酒</td>
+                <td class="des">拉菲珍宝<br />
+                  Carruades de lafittle<br /></td>
                 <td class="info">容量:750ml<br />
                   购买时间: 2005年<br />
                   酒商: 某某酒商<br />
@@ -121,11 +118,8 @@
               <tr>
                 <td class="img"><a href="wine_profile.html"><img src="images/test/wine50.jpg" width="50" height="50" alt="wine name" /></a></td>
                 <td class="year">2005</td>
-                <td class="des">2001拉菲珍宝<br />
-                  Carruades de lafittle<br />
-                  法国-波尔多-波亚克<br />
-                  拉菲古堡<br />
-                红葡萄酒</td>
+                <td class="des">拉菲珍宝<br />
+                  Carruades de lafittle<br /></td>
                 <td class="info">容量:750ml<br />
                   购买时间: 2005年<br />
                   酒商: 某某酒商<br />
@@ -139,11 +133,8 @@
               <tr>
                 <td class="img"><a href="wine_profile.html"><img src="images/test/wine50.jpg" width="50" height="50" alt="wine name" /></a></td>
                 <td class="year">2005</td>
-                <td class="des">2001拉菲珍宝<br />
-                  Carruades de lafittle<br />
-                  法国-波尔多-波亚克<br />
-                  拉菲古堡<br />
-                红葡萄酒</td>
+                <td class="des">拉菲珍宝<br />
+                  Carruades de lafittle<br /></td>
                 <td class="info">容量:750ml<br />
                   购买时间: 2005年<br />
                   酒商: 某某酒商<br />
@@ -157,11 +148,8 @@
               <tr>
                 <td class="img"><a href="wine_profile.html"><img src="images/test/wine50.jpg" width="50" height="50" alt="wine name" /></a></td>
                 <td class="year">2005</td>
-                <td class="des">2001拉菲珍宝<br />
-                  Carruades de lafittle<br />
-                  法国-波尔多-波亚克<br />
-                  拉菲古堡<br />
-                红葡萄酒</td>
+                <td class="des">拉菲珍宝<br />
+                  Carruades de lafittle<br /></td>
                 <td class="info">容量:750ml<br />
                   购买时间: 2005年<br />
                   酒商: 某某酒商<br />
@@ -175,11 +163,8 @@
               <tr>
                 <td class="img"><a href="wine_profile.html"><img src="images/test/wine50.jpg" width="50" height="50" alt="wine name" /></a></td>
                 <td class="year">2005</td>
-                <td class="des">2001拉菲珍宝<br />
-                  Carruades de lafittle<br />
-                  法国-波尔多-波亚克<br />
-                  拉菲古堡<br />
-                红葡萄酒</td>
+                <td class="des">拉菲珍宝<br />
+                  Carruades de lafittle<br /></td>
                 <td class="info">容量:750ml<br />
                   购买时间: 2005年<br />
                   酒商: 某某酒商<br />
