--- a/public/template/cellar_people.html
+++ b/public/template/cellar_people.html
@@ -100,11 +100,8 @@
               <tr>
                 <td class="img"><a href="wine_profile.html"><img src="images/test/wine50.jpg" width="50" height="50" alt="wine name" /></a></td>
                 <td class="year">2005</td>
-                <td class="des">2001拉菲珍宝<br />
-                  Carruades de lafittle<br />
-                  法国-波尔多-波亚克<br />
-                  拉菲古堡<br />
-                红葡萄酒</td>
+                <td class="des">拉菲珍宝<br />
+                  Carruades de lafittle<br /></td>
                 <td class="info">容量:750ml<br />
                   购买时间: 2005年<br />
                   酒商: 某某酒商<br />
@@ -116,11 +113,8 @@
               <tr>
                 <td class="img"><a href="wine_profile.html"><img src="images/test/wine50.jpg" width="50" height="50" alt="wine name" /></a></td>
                 <td class="year">2005</td>
-                <td class="des">2001拉菲珍宝<br />
-                  Carruades de lafittle<br />
-                  法国-波尔多-波亚克<br />
-                  拉菲古堡<br />
-                红葡萄酒</td>
+                <td class="des">拉菲珍宝<br />
+                  Carruades de lafittle<br /></td>
                 <td class="info">容量:750ml<br />
                   购买时间: 2005年<br />
                   酒商: 某某酒商<br />
@@ -132,11 +126,8 @@
               <tr>
                 <td class="img"><a href="wine_profile.html"><img src="images/test/wine50.jpg" width="50" height="50" alt="wine name" /></a></td>
                 <td class="year">2005</td>
-                <td class="des">2001拉菲珍宝<br />
-                  Carruades de lafittle<br />
-                  法国-波尔多-波亚克<br />
-                  拉菲古堡<br />
-                红葡萄酒</td>
+                <td class="des">拉菲珍宝<br />
+                  Carruades de lafittle<br /></td>
                 <td class="info">容量:750ml<br />
                   购买时间: 2005年<br />
                   酒商: 某某酒商<br />
@@ -148,11 +139,8 @@
               <tr>
                 <td class="img"><a href="wine_profile.html"><img src="images/test/wine50.jpg" width="50" height="50" alt="wine name" /></a></td>
                 <td class="year">2005</td>
-                <td class="des">2001拉菲珍宝<br />
-                  Carruades de lafittle<br />
-                  法国-波尔多-波亚克<br />
-                  拉菲古堡<br />
-                红葡萄酒</td>
+                <td class="des">拉菲珍宝<br />
+                  Carruades de lafittle<br /></td>
                 <td class="info">容量:750ml<br />
                   购买时间: 2005年<br />
                   酒商: 某某酒商<br />
@@ -164,11 +152,8 @@
               <tr>
                 <td class="img"><a href="wine_profile.html"><img src="images/test/wine50.jpg" width="50" height="50" alt="wine name" /></a></td>
                 <td class="year">2005</td>
-                <td class="des">2001拉菲珍宝<br />
-                  Carruades de lafittle<br />
-                  法国-波尔多-波亚克<br />
-                  拉菲古堡<br />
-                红葡萄酒</td>
+                <td class="des">拉菲珍宝<br />
+                  Carruades de lafittle<br /></td>
                 <td class="info">容量:750ml<br />
                   购买时间: 2005年<br />
                   酒商: 某某酒商<br />
