--- a/public/template/cellar_wine_add_detail.html
+++ b/public/template/cellar_wine_add_detail.html
@@ -94,7 +94,7 @@
                        <div class="content">红葡萄酒</div>
                    </div>
                    <div class="optional">
-                       <label>酒商</label>
+                       <label class="vm">酒商</label>
                        <input name="text" type="text" class="text trader" value="某某酒商" />
                    </div>
                    <div class="required">
@@ -106,15 +106,15 @@
                        </div>
                    </div>
                    <div class="required">
-                       <label><span>*</span>库存</label>
+                       <label class="vm"><span>*</span>库存</label>
                        <input type="text" class="text count" name="text"/>支
                    </div>
                    <div class="required">
-                       <label><span>*</span>所在位置</label>
+                       <label class="vm"><span>*</span>所在位置</label>
                        <input name="text" type="text" class="text" value="上海" />
                    </div>
          <div class="required">
-                       <label><span>*</span>购入价格</label>
+                       <label class="vm"><span>*</span>购入价格</label>
                 <input name="text" type="text" class="text price"/>元/支
                   </div>
                   <div class="optional">
