--- a/public/template/user_profile.html
+++ b/public/template/user_profile.html
@@ -48,7 +48,7 @@
                       xiaoying@test.com <a href="user_password.html">修改密码</a>
                    </div>
                    <div class="required">
-                       <label><span>*</span>昵称</label>
+                       <label class="vm"><span>*</span>昵称</label>
                        <input name="text" type="text" class="text name" value="不良夏生" /> 
                    </div>
                   <div class="required">
@@ -69,13 +69,13 @@
                          </select>
                   </div>
                    <div class="required">
-                       <label><span>*</span>所在地</label>
+                       <label class="vm"><span>*</span>所在地</label>
                        <div class="content">
                            <input name="text" type="text" class="text" value="上海" />
                        </div>
                    </div>
                    <div class="optional">
-                   		<label>博客地址</label>
+                   		<label class="vm">博客地址</label>
                        <input name="text" type="text" class="text name mr5" value="http://luoqihome.blogbus.com" />
                    </div>
                    <div class="optional">
