--- a/public/template/cellar_wine_edit.html
+++ b/public/template/cellar_wine_edit.html
@@ -91,7 +91,7 @@
                        <div class="content">红葡萄酒</div>
                    </div>
                    <div class="optional">
-                       <label>酒商</label>
+                       <label class="vm">酒商</label>
                        <input name="text" type="text" class="text trader" value="某某酒商" />
                    </div>
                    <div class="required">
@@ -103,7 +103,7 @@
                        </div>
                    </div>
                    <div class="required">
-                       <label><span>*</span>库存</label>
+                       <label class="vm"><span>*</span>库存</label>
                        <input type="text" class="text count" name="text"/>支
                    </div>
                    <div class="required">
@@ -113,7 +113,7 @@
                        </select>
                    </div>
              <div class="required">
-                       <label><span>*</span>购入价格</label>
+                       <label class="vm"><span>*</span>购入价格</label>
                 <input name="text" type="text" class="text price"/>元/支
                   </div>
                   <div class="optional">
