--- a/public/template/register.html
+++ b/public/template/register.html
@@ -45,13 +45,13 @@
     <div id="wrapper950">
     	<div id="register">
             <div class="boxstyle">
-                    <div class="top">注册iWine</div>
+                    <div class="top">注册iWine.com</div>
                     <div class="mid">
-                      <p>用户名<span class="red">*</span></p>
+                      <p>E-mail<span class="red">*</span></p>
                           <div class="un">
                               <div class="field_with_errors">
                               <input class="text" name="" type="text"  />
-                              <label class="message">该用户名已存在</label>
+                              <label class="message">该E-mail地址无效</label>
                               </div>
                           </div>
                       <p>密码<span class="red">*</span></p>
@@ -61,24 +61,19 @@
                            <label class="message">密码至少为6个字符</label>
                           </div>
                       </div>
-                      <p>E-mail<span class="red">*</span></p>
+                      <p>用户名<span class="red">*</span></p>
                           <div class="pw">
                           	<div class="field_with_errors">
                           	<input class="text"  name="" type="text" />
-                            <label class="message">该E-mail地址无效</label>
+                            <label class="message">该用户名已存在</label>
                           	</div>
                           </div>
-                      <p>所在地<span class="red">*</span></p>
-                          <div class="pw"><input class="text"  name="" type="text" /></div>
+                      <p class="agree">
+                                <input name="" type="checkbox" class="checkbox" value="" checked="checked" />
+                            我已阅读并同意《<a href="#">使用条款</a>》，同时确认已达当地法定饮酒年龄。
+                        </p>
                       <div class="submit">
-                      	<span class="float_r agree">
-                        	<div class="field_with_errors">
-                                <input class="checkbox" name="" type="checkbox" value="" />
-                                <label class="message" for="user_agree_term">必须是可被接受的</label>
-                                </div>
-                            我已阅读并同意<a href="#">使用条款</a>
-                        </span>
-                          <a href="register.html"><img src="images/common/register_submit.jpg" width="138" height="51" alt="马上注册" /></a>
+                          <a href="register.html"><img src="images/common/register_submit.jpg" width="138" height="51" alt="提交" /></a>
                       </div>
                   </div>
                     <div class="bot"></div>
