--- a/app/views/themes/waterfall/settings/basic.html.erb
+++ b/app/views/themes/waterfall/settings/basic.html.erb
@@ -20,14 +20,14 @@
         <%= link_to "修改密码", update_password_settings_path %>
       </div>
       <div class="required">
-        <label><span>*</span>昵称</label>
+        <label class="vm"><span>*</span>昵称</label>
         <%= f.text_field :username , :class => "text name"%>
       </div>
         <%= f.fields_for :profile do |p| %>
       <div class="required">
         <label>性别</label>
-        <%= p.radio_button :gender, 1  %>男
-        <%= p.radio_button :gender, 0 %>女
+        <label class="w50"><%= p.radio_button :gender, 1  %>男</label>
+        <label class="w50"><%= p.radio_button :gender, 0 %>女</label>
       </div>
       <div class="required">
         <label>生日</label>
@@ -35,14 +35,14 @@
       </div>
         <% end %>
       <div class="required">
-        <label><span>*</span>所在地</label>
+        <label class="vm"><span>*</span>所在地</label>
         <div class="content">
           <%= f.text_field :city, :class => "text" %>
         </div>
       </div>
        <%= f.fields_for :profile do |p| %>
       <div class="optional">
-        <label>博客地址</label>
+        <label class="vm">博客地址</label>
         <%= p.text_field :website, :class => "text name mr5" %>
       </div>
       <div class="optional">
