--- a/app/views/themes/waterfall/wine_details/_new_form.html.erb
+++ b/app/views/themes/waterfall/wine_details/_new_form.html.erb
@@ -2,8 +2,8 @@
     <% unless @register.new_record? %><input type="hidden" name="register_id" value="<%= @register.id %>"/><% end %>
     <div class="left">
       <div class="required">
-        <label><span>*</span>葡萄酒英文名</label>
-        <% if @read_only %> <%= @register.name_en %> <% else %><%= f.text_field :name_en %><% end %>
+        <label class="vm"><span>*</span>葡萄酒英文名</label>
+        <% if @read_only %> <%= @register.name_en %> <% else %><%= f.text_field :name_en, :class => "name text" %><% end %>
       </div>
       <div class="required">
         <label><span>*</span>类型</label>
@@ -11,7 +11,7 @@
       </div>
       <div class="required">
         <label><span>*</span>产区</label>
-        <% if @read_only %><%=  @register.region_path_zh %> <% else %><%= render "region_tree" %><% end %>
+        <div class="areas"><% if @read_only %><%=  @register.region_path_zh %> <% else %><%= render "region_tree" %><% end %></div>
       </div>
 
       <div class="required">
@@ -21,11 +21,11 @@
       </div>
       <div class="required">
         <label><span>*</span>容量</label>
-        <%= f.select :capacity, APP_DATA['wines']['capacity'].each{|key, value| [key, value]} %>
+        <div class="text"><%= f.select :capacity, APP_DATA['wines']['capacity'].each{|key, value| [key, value]} %></div>
       </div>
       <div class="optional">
-        <%= f.label :photo_name %>
-        <%= f.file_field :photo_name %>
+        <%= f.label :photo_name, :class => "vm" %>
+        <%= f.file_field :photo_name, :class => "text name mr5" %>
       </div>
       <div class="mt10">
         <label>&nbsp;</label>
