--- a/app/views/themes/waterfall/photos/fileupload/_queue.html
+++ b/app/views/themes/waterfall/photos/fileupload/_queue.html
@@ -3,10 +3,17 @@
 {% for (var i=0, file; file=o.files[i]; i++) { %}
     <tr class="template-upload fade">
         <td class="preview"><span class="fade"></span></td>
-        <td class="name delet"><span>{%=file.name%}</span></td>
-        {% if (file.error) { %}
-            <td class="error" colspan="2"><span class="label label-important">{%=locale.fileupload.error%}</span> {%=locale.fileupload.errors[file.error] || file.error%}</td>
-        {% } else if (o.files.valid && !i) { %}
+        <td class="name delet">
+            
+            {% if (file.error) { %}
+                <span style="text-decoration:line-through;">{%=file.name%}</span>
+                <div class="error" colspan="2"><span class="label label-important">{%=locale.fileupload.error%}</span> {%=locale.fileupload.errors[file.error] || file.error%}</div>
+            {% } else { %}
+                <span>{%=file.name%}</span>
+            {% } %}
+        </td>
+
+        {% if (o.files.valid && !i) { %}
             <td>
                 <div class="progress progress-success progress-striped active progress-animated" >
                     <div class="bar" style="width:0%;" ></div>
