my home page template update

--- a/public/template/myhp.html
+++ b/public/template/myhp.html
@@ -45,8 +45,9 @@
             <div class="hp_info">
                 <div class="hp_right"><a href="cellar.html" class="btn_red_sb"><span>某个名字很长很长的人的酒窖</span></a></div>
                 <div class="username">不良夏生</div>
-                <div class="mystatu">准备小宇宙爆发...<span><a href="#">修改</a></span></div>
-                <div class="item"><span class="icon_fol mr5">已关注</span><span class="icon_fol_e mr5">互相关注<span class="cancl_fol"> <a href="#">(取消)</a></span><a href="#" class="btn_gray"><span>加关注</span></a></span><a class="icon_mail" href="#">发私信</a></div>
+                <div class="mystatu"><p>准备小宇宙爆发...<span><a href="#">修改</a></span></p>
+                <p>博客：<a href="#">http://test.blogbus.com</a></p></div>
+                <div class="item"><span class="icon_fol mr5">已关注</span><span class="icon_fol_e mr5">互相关注</span><span class="cancl_fol mr5"> <a href="#">(取消)</a></span><a href="#" class="btn_gray mr5"><span>加关注</span></a><a class="icon_mail" href="#">发私信</a></div>
                 <ul class="hp_navi">
                     <li><a href="cellar.html">12<br/>藏酒</a></li>
                     <li><a href="myhp_wine_list.html">12<br/>
