--- a/public/template/album_photo_upload2.html
+++ b/public/template/album_photo_upload2.html
@@ -41,11 +41,12 @@
     	<div class="whitespace">
         <div id="hp" class="min_height" >
           <div class="hp_header">
-            <div class="hp_right"><a href="cellar.html" class="btn_red_sb"><span>我的酒窖</span></a></div>
             <div class="hp_userimg"><a href="#"><img src="images/userimage/p130.jpg" width="130" height="130" alt="usrename" /></a></div>
             <div class="hp_info">
+                <div class="hp_right"><a href="cellar.html" class="btn_red_sb"><span>我的酒窖</span></a></div>
                 <div class="username">不良夏生</div>
-                <div class="mystatu">准备小宇宙爆发...<span><a href="#">修改</a></span></div>
+                <div class="mystatu"><p>准备小宇宙爆发...<span><a href="#">修改</a></span></p>
+                <p>博客：<a href="#">http://test.blogbus.com</a></p></div>
                 <div class="item"><a class="icon_mail" href="#">私信</a> | <a href="#">设置</a></div>
                 <ul class="hp_navi">
                     <li><a href="cellar.html">12<br/>藏酒</a></li>
@@ -68,7 +69,6 @@
         	<div class="title_btn">
               <h1>上传照片<span class="font12"></span></h1>
             </div>
-            
        	    <ul class="uploade_done clearfix">
                 	<li>
                     	<div class="thumb">
