--- a/public/template/album_photo_upload3.html
+++ b/public/template/album_photo_upload3.html
@@ -41,11 +41,12 @@
     	<div class="whitespace">
         <div id="hp">
           <div class="hp_header">
-            <div class="hp_right"><a href="cellar.html" class="btn_red_sb"><span>我的酒窖</span></a></div>
             <div class="hp_userimg"><a href="#"><img src="images/userimage/p130.jpg" width="130" height="130" alt="usrename" /></a></div>
             <div class="hp_info">
+                <div class="hp_right"><a href="cellar.html" class="btn_red_sb"><span>我的酒窖</span></a></div>
                 <div class="username">不良夏生</div>
-                <div class="mystatu">准备小宇宙爆发...<span><a href="#">修改</a></span></div>
+                <div class="mystatu"><p>准备小宇宙爆发...<span><a href="#">修改</a></span></p>
+                <p>博客：<a href="#">http://test.blogbus.com</a></p></div>
                 <div class="item"><a class="icon_mail" href="#">私信</a> | <a href="#">设置</a></div>
                 <ul class="hp_navi">
                     <li><a href="cellar.html">12<br/>藏酒</a></li>
@@ -69,31 +70,23 @@
       </div>
       <ul class="photo_list">
        	<li class="photo_des"> <img class="cover" src="images/test/pic190_1.jpg" width="191" height="128" alt="cover" />
-          <p>标题</p>
-          <p><input class="text photo_name" name="" type="text" /></p>
           <p>描述</p>
           <p><textarea class="photo_des" name="" cols="" rows=""></textarea></p>
           <p><a href="#" class="icon_delet float_r">删除</a><label><input class="radio" name="社会封面" type="radio" checked="checked" /> 设为封面</label></p>
         </li>
         <li class="photo_des"> <img class="cover" src="images/test/pic190_1.jpg" width="191" height="128" alt="cover" />
-          <p>标题</p>
-          <p><input class="text photo_name" name="" type="text" /></p>
           <p>描述</p>
           <p><textarea class="photo_des" name="" cols="" rows=""></textarea></p>
           <p><a href="#" class="icon_delet float_r">删除</a>
             <label><input class="radio" name="社会封面" type="radio" /> 设为封面</label></p>
         </li>
         <li class="photo_des"> <img class="cover" src="images/test/pic190_1.jpg" width="191" height="128" alt="cover" />
-          <p>标题</p>
-          <p><input class="text photo_name" name="" type="text" /></p>
           <p>描述</p>
           <p><textarea class="photo_des" name="" cols="" rows=""></textarea></p>
           <p><a href="#" class="icon_delet float_r">删除</a>
             <label><input class="radio" name="社会封面" type="radio" /> 设为封面</label></p>
         </li>
         <li class="last photo_des"> <img class="cover" src="images/test/pic190_1.jpg" width="191" height="128" alt="cover" />
-          <p>标题</p>
-          <p><input class="text photo_name" name="" type="text" /></p>
           <p>描述</p>
           <p><textarea class="photo_des" name="" cols="" rows=""></textarea></p>
           <p><a href="#" class="icon_delet float_r">删除</a>
@@ -101,16 +94,12 @@
         </li>
         <div class="clear"></div>
         <li class="photo_des"> <img class="cover" src="images/test/pic190_1.jpg" width="191" height="128" alt="cover" />
-          <p>标题</p>
-          <p><input class="text photo_name" name="" type="text" /></p>
           <p>描述</p>
           <p><textarea class="photo_des" name="" cols="" rows=""></textarea></p>
           <p><a href="#" class="icon_delet float_r">删除</a>
             <label><input class="radio" name="社会封面" type="radio" /> 设为封面</label></p>
         </li>
         <li class="photo_des"> <img class="cover" src="images/test/pic190_1.jpg" width="191" height="128" alt="cover" />
-          <p>标题</p>
-          <p><input class="text photo_name" name="" type="text" /></p>
           <p>描述</p>
           <p><textarea class="photo_des" name="" cols="" rows=""></textarea></p>
           <p><a href="#" class="icon_delet float_r">删除</a>
