--- a/public/template/cellar_wine_add_1.html
+++ b/public/template/cellar_wine_add_1.html
@@ -45,7 +45,8 @@
             <div class="hp_info">
                 <div class="hp_right"><a href="#" class="btn_red_sb"><span>我的酒窖</span></a></div>
                 <div class="username">不良夏生</div>
-                <div class="mystatu">准备小宇宙爆发...<span><a href="#">修改</a></span></div>
+                <div class="mystatu"><p>准备小宇宙爆发...<span><a href="#">修改</a></span></p>
+                <p>博客：<a href="#">http://test.blogbus.com</a></p></div>
                 <div class="item"><a class="icon_mail" href="#">私信</a> | <a href="#">设置</a></div>
                 <ul class="hp_navi">
                     <li class="current"><a href="cellar.html">12<br/>藏酒</a></li>
