--- a/public/template/album.html
+++ b/public/template/album.html
@@ -75,8 +75,8 @@
           <p class="info">3张照片 2012-1-28更新<br/>
           10浏览 | 5评论 | 2赞</p>
         </li>
-        <li> <a href="album_photo_list.html"><img class="cover" src="images/test/album_cover.jpg" width="150" height="150" alt="cover" /></a>
-            <h2><a href="album_photo_list.html">吃货那点事儿</a></h2>
+        <li> <a href="album_photo_list.html"><img class="cover" src="images/common/p_album.png" width="150" height="150" alt="cover" /></a>
+          <h2><a href="album_photo_list.html">吃货那点事儿</a></h2>
           <p class="info">3张照片 2012-1-28更新<br/>
           10浏览 | 5评论 | 2赞</p>
         </li>
