--- a/public/template/album_property.html
+++ b/public/template/album_property.html
@@ -86,6 +86,12 @@
                       </tr>
                       <tr>
                         <td>&nbsp;</td>
+                        <td><label>
+                          <input type="checkbox" name="checkbox" id="checkbox" />
+                        不公开</label></td>
+                      </tr>
+                      <tr>
+                        <td>&nbsp;</td>
                         <td><a href="album_photo_list.html" class="btn_gray mr5"><span>保存修改</span></a><a href="album_photo_list.html" class="btn_gray"><span>取消</span></a></td>
                         </tr>
                     </table>
