--- a/public/template/cellar.html
+++ b/public/template/cellar.html
@@ -102,7 +102,7 @@
                 <th>&nbsp;</th>
               </tr>
               <tr>
-                <td class="img"><a href="wine_profile.html"><img src="images/test/wine50.jpg" width="50" height="50" alt="wine name" /></a></td>
+                <td class="img"><div><span class="non_public"><img src="images/icon/non_public.png" width="16" height="16" alt="仅自己可见"   title="仅自己可见"/></span><a href="wine_profile.html"><img src="images/test/thumb_55e800f7314aa21f74c4794f8111ac88a8aae1f5.jpg" width="50" height="50" alt="wine name" /></a></div></td>
                 <td class="year">2005</td>
                 <td class="des">拉菲珍宝<br />
                   Carruades de lafittle<br /></td>
@@ -117,7 +117,7 @@
                 <td><a href="#" class="icon_delet">删除</a></td>
               </tr>
               <tr>
-                <td class="img"><a href="wine_profile.html"><img src="images/test/wine50.jpg" width="50" height="50" alt="wine name" /></a></td>
+                <td class="img"><div><span class="non_public"><img src="images/icon/non_public.png" width="16" height="16" alt="仅自己可见"   title="仅自己可见"/></span><a href="wine_profile.html"><img src="images/test/thumb_f6a4a826264a8fe9594230bfb9403dc888a7c3c8.png" width="50" height="50" alt="wine name" /></a></div></td>
                 <td class="year">2005</td>
                 <td class="des">拉菲珍宝<br />
                   Carruades de lafittle<br /></td>
@@ -132,7 +132,7 @@
                 <td><a href="#" class="icon_delet">删除</a></td>
               </tr>
               <tr>
-                <td class="img"><a href="wine_profile.html"><img src="images/test/wine50.jpg" width="50" height="50" alt="wine name" /></a></td>
+                <td class="img"><div><span class="non_public"><img src="images/icon/non_public.png" width="16" height="16" alt="仅自己可见"   title="仅自己可见"/></span><a href="wine_profile.html"><img src="images/test/thumb_610f25e777f795a10bd68542803e57dce5eee7cd.jpg" width="50" height="50" alt="wine name" /></a></div></td>
                 <td class="year">2005</td>
                 <td class="des">拉菲珍宝<br />
                   Carruades de lafittle<br /></td>
@@ -147,7 +147,7 @@
                 <td><a href="#" class="icon_delet">删除</a></td>
               </tr>
               <tr>
-                <td class="img"><a href="wine_profile.html"><img src="images/test/wine50.jpg" width="50" height="50" alt="wine name" /></a></td>
+                <td class="img"><div><a href="wine_profile.html"><img src="images/test/wine50.jpg" width="50" height="50" alt="wine name" /></a></div></td>
                 <td class="year">2005</td>
                 <td class="des">拉菲珍宝<br />
                   Carruades de lafittle<br /></td>
@@ -162,7 +162,7 @@
                 <td><a href="#" class="icon_delet">删除</a></td>
               </tr>
               <tr>
-                <td class="img"><a href="wine_profile.html"><img src="images/test/wine50.jpg" width="50" height="50" alt="wine name" /></a></td>
+                <td class="img"><div><a href="wine_profile.html"><img src="images/test/wine50.jpg" width="50" height="50" alt="wine name" /></a></div></td>
                 <td class="year">2005</td>
                 <td class="des">拉菲珍宝<br />
                   Carruades de lafittle<br /></td>
