--- a/public/template/wine_photo_upload_success.html
+++ b/public/template/wine_photo_upload_success.html
@@ -47,18 +47,7 @@
                 <div class="clear"></div>
             </div>
                 <div class="wp_space_line ptb30" style="min-height:500px;">
-                <p class="mb10"><input class="text mr5" name="" type="text" size="50" /><a href="#" class="btn_blue_b mr5"><span>选择图片</span></a></p>
-                <p class="mb10"><input name="" type="checkbox" value="" /> 
-                同时上传到我的相册</p>
-                <p class="mb20">选择相册 
-              <select name="">
-              <option selected="selected">吃货那点事儿</option>
-              <option>植物也疯狂</option>
-              <option>小朋友们</option>
-              </select>
-              <a href="#" class="icon_add_album add_album">新建相册</a></p>
-                <p class="mb20">（每次最多上传10张图片；每张图片最大为5MB。我们仅支持以下格式图片：JPEG、PNG、GIF。）</p>
-                <div class="clear"></div>
+                <div class="success">上传成功！</div>
             </div>
           </div>
         <div id="wp_right">
