--- a/public/template/stylesheets/main.css
+++ b/public/template/stylesheets/main.css
@@ -271,7 +271,7 @@ a.icon_comment {background-position:0 -143px;padding-left:15px;}
 #header .main860 {width:860px;margin:0 auto;}
 #header #logo {width:300px;float:left;}
 #header #top_search {float:left;width:350px;margin:5px 0 0 20px;}
-#header #top_right {float:right;}
+#header #top_right {float:right;padding-top:5px;}
 #header #top_right ul li {float:right;margin-left:5px;}
 #header #top_right .userbox {position:relative;padding-bottom:5px;}
 #header #top_right .userbox .userpic {width:20px;height:20px;border:5px solid #f5f3f3;}
