--- a/app/views/themes/waterfall/searches/winery.html.erb
+++ b/app/views/themes/waterfall/searches/winery.html.erb
@@ -85,3 +85,12 @@
   </div>
   <div class="clear"></div>
 </div>
+<script type="text/javascript" >
+    $("#search_input").bind("keyup",
+        function(e){
+            if(e.keyCode == 13){
+                location.href = '/searches/winery?word=' + this.value;
+            }
+        }
+    );
+</script>
