--- a/app/views/themes/waterfall/searches/results.html.erb
+++ b/app/views/themes/waterfall/searches/results.html.erb
@@ -2,7 +2,8 @@
 <div class="whitespace normal search">
   <div class="left">
     <div class="searchbox">
-      <a href="<%= url_for( '/searches/results?tab=all&word=' )%>" onclick="this.href+=$('#search_input').val()" id="search_link" class="btn_gray float_r">
+      <% tab = params[:tab].present? ? params[:tab] : 'all' %>
+      <a href='<%= url_for( "/searches/results?tab=#{tab}&word=" )%>' onclick="this.href+=$('#search_input').val()" id="search_link" class="btn_gray float_r">
         <span>搜索</span>
       </a>
       <input class="text"  name="" id="search_input" type="text" placeholder="请输入酒款或酒庄的名称" value="<%= params[:word] %>"/>
@@ -110,3 +111,12 @@
   </div>
   <div class="clear"></div>
 </div>
+<script type="text/javascript" >
+    $("#search_input").bind("keyup",
+        function(e){
+            if(e.keyCode == 13){
+                location.href = '/searches/results?tab=<%= tab %>&word=' + this.value;
+            }
+        }
+    );
+</script>
