--- a/app/views/themes/waterfall/wine_details/share/_photos.html.erb
+++ b/app/views/themes/waterfall/wine_details/share/_photos.html.erb
@@ -6,7 +6,7 @@
 	<h2>
 		所有照片
 		<span class="font12 more">
-			<%= link_to "(共#{@wine_detail.all_photo_counts}张...)", wine_photos_path(@wine_detail.id) %>
+			<%= link_to "(共#{@wine_detail.all_photo_counts}张...)", wine_photos_path(@wine_detail) %>
 		</span>
 	</h2>
 	<div class="clear"></div>
