--- a/app/views/themes/waterfall/comments/_comment_list.html.erb
+++ b/app/views/themes/waterfall/comments/_comment_list.html.erb
@@ -5,7 +5,7 @@
 		<h2>
 		  评论
 		  <span class="font12 more">
-		    <%= link_to "(#{@wine_detail.comments_count}条...)", wine_comments_path(@wine_detail.id)%>
+		    <%= link_to "(#{@wine_detail.comments_count}条...)", wine_comments_path(@wine_detail)%>
 		  </span>
 		</h2>
 		<% end %>
