--- a/app/views/themes/waterfall/photos/wine_photo_list.html.erb
+++ b/app/views/themes/waterfall/photos/wine_photo_list.html.erb
@@ -16,7 +16,7 @@
     <ul class="wine_pic_list">
       <% @photos.each do |photo|%>
       <li>
-        <%= link_to image_tag(photo.image_url(:thumb)), wine_photo_path(@wine_detail.id, photo.id) %>
+        <%= link_to image_tag(photo.image_url(:thumb)), wine_photo_path(@wine_detail, photo.id) %>
         <a class="icon_comment"><%= photo.comments.count %></a>
       </li>
       <% end %>
