--- a/app/views/themes/waterfall/wine_details/share/_buttons.html.erb
+++ b/app/views/themes/waterfall/wine_details/share/_buttons.html.erb
@@ -10,36 +10,29 @@
 </div>
 <div>
 	
-	<% unless user_signed_in? %>
-	<%= link_to  new_wine_follow_path(@wine_detail.id), 
-	                                   :class => [:btn_gray, :mr5, :ajax], 
-	                                   :remote => true do %>
-		<span>关注</span>
-	<% end %>
-	<%# 用户已经登录， 检查是否已经关注 %>
-	<% else %>
-		 <%  if @wine_detail.is_followed_by? current_user %>
+	<% if @follow_item.present? %>
 			<span class="icon_fol mr5">
 					已关注
 				<span class="cancl_fol">
-					 <%= link_to "(取消)", wine_follow_path(@wine_detail), :method => :delete %>
+					 <%= link_to "(取消)", wine_follow_path(@wine_detail, @follow_item), :method => :delete %>
 				</span>
 		  </span>
-		 <% else %>
-				<%= link_to new_wine_follow_path(@wine_detail.id), 
-							                            :class => [:btn_gray, :mr5, :ajax], 
-							                            :remote => true do %>
-					<span>关注</span>
-				<% end %>
-		 <% end %>
+
+	<% else %>
+		<%= link_to new_wine_follow_path(@wine_detail), 
+					                            :class => [:btn_gray, :mr5, :ajax], 
+					                            :remote => true do %>
+			<span>关注</span>
+		<% end %>
 	<% end %>
+
 	
-	<%= link_to new_wine_comment_path(@wine_detail.id, :do => "comment"),  
+	<%= link_to new_wine_comment_path(@wine_detail, :do => "comment"),  
 	                                  :class => [:btn_gray, :mr5, :ajax], 
 	                                  :remote => true do %>
 		<span>评论</span>
 	<% end %>
-	<%= link_to  add_to_cellar_wine_path(@wine_detail.id), :class => [:btn_gray] do %>
+	<%= link_to  add_to_cellar_wine_path(@wine_detail), :class => [:btn_gray] do %>
 		<span>加入酒窖</span>
 	<% end %>
 </div>
