--- a/app/views/themes/waterfall/wine_details/share/_followers.html.erb
+++ b/app/views/themes/waterfall/wine_details/share/_followers.html.erb
@@ -1,7 +1,7 @@
 <div class="wp_space_line ptb30">
 	<div class="title_btn">
 		<h2>他们关注<span class="font12 more">
-			<%= link_to "（共#{@wine_detail.followers_count}人...)", followers_wine_path(@wine_detail.id) %>
+			<%= link_to "（共#{@wine_detail.followers_count}人...)", followers_wine_path(@wine_detail) %>
 		</span></h2>
 	</div>
 	<ul class="wp_follower">
