--- a/app/views/themes/waterfall/wine_details/share/_resource.html.erb
+++ b/app/views/themes/waterfall/wine_details/share/_resource.html.erb
@@ -1,7 +1,7 @@
 <div class="wp_count clearfix">
-	<%= link_to "#{@wine_detail.followers_count}<br /> 关注".html_safe, followers_wine_path(@wine_detail.id) %>
-	<%= link_to "#{@wine_detail.owners_count}<br /> 拥有".html_safe, owners_wine_path(@wine_detail.id)  %>
-	<%= link_to "#{@wine_detail.comments_count}<br /> 评论".html_safe, wine_comments_path(@wine_detail.id) %>
-	<%= link_to "#{@wine_detail.all_photo_counts}<br /> 照片".html_safe, wine_photos_path(@wine_detail.id) %>
+	<%= link_to "#{@wine_detail.followers_count}<br /> 关注".html_safe, followers_wine_path(@wine_detail) %>
+	<%= link_to "#{@wine_detail.owners_count}<br /> 拥有".html_safe, owners_wine_path(@wine_detail)  %>
+	<%= link_to "#{@wine_detail.comments_count}<br /> 评论".html_safe, wine_comments_path(@wine_detail) %>
+	<%= link_to "#{@wine_detail.all_photo_counts}<br /> 照片".html_safe, wine_photos_path(@wine_detail) %>
 	<div class="clear"></div>
 </div>
