--- a/app/views/themes/waterfall/wine_details/short_comments.html.erb
+++ b/app/views/themes/waterfall/wine_details/short_comments.html.erb
@@ -7,8 +7,8 @@
   </div>
   <div class="sort_space">
     <div class="sort_item">
-      <a href="<%= url_for :action => 'short_comments', :wine_detail_id => @wine_detail.id %>">按投票排序</a> | 
-      <a href="<%= url_for :action => 'short_comments', :wine_detail_id => @wine_detail.id, :order => 'time' %>">按时间排序</a>
+      <a href="<%= url_for :action => 'short_comments', :wine_detail_id => @wine_detail %>">按投票排序</a> | 
+      <a href="<%= url_for :action => 'short_comments', :wine_detail_id => @wine_detail, :order => 'time' %>">按时间排序</a>
     </div><div class="count">共<%= @wine_comments.total_count.to_i %>条</div>
   </div>
   <div class="comment_list">
