--- a/app/views/themes/waterfall/wineries/_winery_detail.html.erb
+++ b/app/views/themes/waterfall/wineries/_winery_detail.html.erb
@@ -48,30 +48,19 @@
          <li class="comment"><%= link_to "#{@winery.comments_count}条评论", winery_comments_path(@winery) %></li>
        </ul>
 
-
-       <% unless user_signed_in? %>
-
-           <%= link_to  new_winery_follow_path(@winery.id), 
-                                              :class => [:btn_gray_b, :mr5, :ajax], 
-                                              :remote => true do %>
-             <span>关注</span>
-           <% end %>
-           <%# 用户已经登录， 检查是否已经关注 %>
+       <% if @follow_item.present? %>
+        <span class="icon_fol mr5">已关注
+           <span class="cancl_fol">
+            <%= link_to "取消", winery_follow_path(@winery, @follow_item), :method => :delete %>
+           </span>
+        </span>
        <% else %>
-           <%  if @winery.is_followed_by? current_user %>
-              <span class="icon_fol mr5">已关注
-                 <span class="cancl_fol">
-                  <%= link_to "取消", winery_follow_path(@winery.id), :method => :delete %>
-                 </span>
-              </span>
-           <% else %>
-             <%= link_to  new_winery_follow_path(@winery.id), 
-                                                :class => [:btn_gray_b, :mr5, :ajax], 
-                                                :remote => true do %>
-               <span>关注</span>
-             <% end %>
-           <% end %>
-       <% end %>
+        <%= link_to  new_winery_follow_path(@winery.id), 
+                                           :class => [:btn_gray_b, :mr5, :ajax], 
+                                           :remote => true do %>
+          <span>关注</span>
+        <% end %>
+      <% end %>
 
        <%= link_to new_winery_comment_path(@winery.id, :do => "comment"), :class => [:btn_gray_b, :mr5, :ajax], :remote => true do %>
            <span>评论</span>
@@ -92,11 +81,11 @@
        </li>
        <li>
          <p class="pic">
-           <%= link_to "/wineries/#{@winery.id}#02" do  %>
+           <%= link_to "/wineries/#{@winery.slug}#02" do  %>
                <%= image_tag("/assets/waterfall/images/icon/winery_intro.gif", :width => 26, :height => 30) %>
            <% end %>
          </p>
-         <p><%= link_to "介绍", "/wineries/#{@winery.id}#02" %></p>
+         <p><%= link_to "介绍", "/wineries/#{@winery.slug}#02" %></p>
        </li>
        <li class="last">
          <p class="pic">
@@ -104,7 +93,7 @@
              <%= image_tag("/assets/waterfall/images/icon/winery_hot.gif", :width => 32, :height => 32)%>
            <% end %>
           </p>
-         <p><%= link_to "热门酒款", "#05" %></p>
+         <p><%= link_to "热门酒庄", "#05" %></p>
        </li>
        <li>
          <p class="pic">
