解决用户无法注册

--- a/app/views/themes/waterfall/settings/basic.html.erb
+++ b/app/views/themes/waterfall/settings/basic.html.erb
@@ -37,8 +37,8 @@
                           :prompt => {:year => '选择年代', :month => '选择月份', :day => '选择日份'} %>
       </div>
         <% end %>
-      <div class="required">
-        <label class="vm"><span>*</span>所在地</label>
+      <div class="optional">
+        <label class="vm">所在地</label>
         <div class="content">
           <%= f.text_field :city, :class => "text" %>
         </div>
