完善 #467 用户只有在更改个人信息时才验证“所在地”

--- a/app/views/themes/waterfall/follows/_follow_form.html.erb
+++ b/app/views/themes/waterfall/follows/_follow_form.html.erb
@@ -8,7 +8,7 @@
 
     分享到
     <%= f.check_box :is_share, 
-    :checked => current_user.profile.config.share.wine_simple_comment.to_i == 1 %> 
+    :checked => current_user.profile.config.share.follow_wine_or_winery.to_i == 1 %> 
     广播
   </div>
   <span class="red text_error" style="display: block; float: right; margin-right: 20px"></span>
